...
                        visualDensity: VisualDensity.compact,
                        icon: Icon(Icons.add_circle_outline,
                            color: context.cs.onSurfaceVariant, size: 20),
                        padding: EdgeInsets.zero,
                        constraints:
                            const BoxConstraints(minWidth: 32, minHeight: 32),
                        tooltip: 'Veranstaltung hinzufügen',
                        onPressed: () => _addLecture(context),
                      ),
                      PopupMenuButton<String>(
                        icon: Icon(Icons.more_vert,
                            color: context.cs.onSurfaceVariant, size: 20),
                        tooltip: 'Weitere Optionen',
...
